# InvestSight

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: main.py
api/routers/: prices.py
api/schemas/: convert.py  history.py
apps/apis/data/: prices.json
apps/apis/services/: base.py  cache.py  coingecko.py  logging.py  mock.py  retry.py  unified.py  yahoo.py
apps/apis/settings/: base.py  schema.py
apps/apis/tests/: test_cache.py  test_coingecko.py  test_config.py  test_error_handling.py  test_logging.py  test_mock.py  test_retry.py  test_unified.py  test_yahoo.py
apps/portfolio/: models.py  tasks.py  urls.py  views.py
apps/portfolio/tests/: test_allocation.py  test_pnl.py  test_r1_total_invested.py  test_r2_current_value.py  test_r3_total_pnl.py  test_r4_holdings_selector.py  test_r5_active_alerts.py  test_r6_portfolio_totals.py  test_r7_performance_history.py  test_r8_allocation_breakdown.py  test_r9_portfolio_full.py  test_totals.py
apps/wallet/: models.py
apps/wallet/migrations/: 0002_seedphrase.py  0003_seedphrase_is_downloaded.py  0004_remove_phrase_field.py  0005_privatekey.py  0006_privatekey_value.py  0007_seedphrase_phrase.py  0008_remove_sensitive_fields.py
apps/wallet/tests/: test_currency.py  test_holding.py  test_pnl.py
config/settings/: base.py
docs/: Portfolio.md
repositories/: __init__.py  alert_repository.py  portfolio_repository.py
templates/partials/: navbar.html
templates/portfolio/: wallet.html
templates/wallet/: crypto_list.html  receive.html
templates/wallet/import/: step1.html  step2.html  (+2 more)
